feat: better time handler

--- a/template/workshop_body_template.html
+++ b/template/workshop_body_template.html
@@ -2,7 +2,7 @@
 <div id="${workshop_id}">
     <h2>${workshop_title}</h2>
     <p>
-        <strong><u>Date</u>: ${workshop_date}</strong>
+        <strong><u>Date</u>: ${workshop_date} ${workshop_time}</strong>
         <a rel="noreferrer noopener" target="_blank" href="${workshop_ics_path}">Add to calendar</a>
     </p>
     <strong><u>Room</u>:</strong>
