feat: working schedule table

--- a/template/workshop_body_template.html
+++ b/template/workshop_body_template.html
@@ -1,5 +1,5 @@
 <hr class="double">
-<div id="${workshop_id}">
+<div id="${workshop_number}">
     <h2>${workshop_title}</h2>
     <p>
         <strong><u>Date</u>: ${workshop_date} ${workshop_time}</strong>
