--- a/template/schedule_table_template.html
+++ b/template/schedule_table_template.html
@@ -1,27 +1,7 @@
 <%!
     import pandas as pd
 %>
-<style>
-    #table_sched {
-        width: 100%;
-        margin: 20px 0;
-        border-collapse: collapse;
-    }
-    #table_sched th, #table_sched td {
-        padding: 10px;
-        text-align: left;
-    }
-    #table_sched th {
-        background-color: #f2f2f2;
-        text-align: center;
-    }
-    #table_sched tr:nth-child(even) {
-        background-color: #f9f9f9;
-    }
-    #table_sched tr:nth-child(odd) {
-        background-color: #ffffff;
-    }
-</style>
+<h2>Agenda</h2>
 <br>
 <table border="1" style="border:2px solid black;" id="table_sched">
     <thead>
