--- a/template/schedule_table_template.html
+++ b/template/schedule_table_template.html
@@ -52,6 +52,8 @@
             % endif
             % endfor
         % endfor
+        <tr><!-- This is an empty row -->
+		</tr>
     </tr>
 </table>
 <br>
