move footer to above schedule table, resolves #1

--- a/template/schedule_table_template.html
+++ b/template/schedule_table_template.html
@@ -1,6 +1,7 @@
 <%!
     import pandas as pd
 %>
+<hr class="double">
 <h2>Agenda</h2>
 <br>
 <table border="1" style="border:2px solid black;" id="table_sched">
