--- a/template/schedule_table_template.html
+++ b/template/schedule_table_template.html
@@ -35,7 +35,7 @@
                     <td>
                         % if (i - len(all_day_workshops)) < len(morning_workshops):
                             <p style="margin-left:10px;">
-                                <a href="${'#' + str(morning_workshops.iloc[i - len(all_day_workshops)][schedule_columns['id_column']]) if not morning_workshops.iloc[i - len(all_day_workshops)][schedule_columns['networking_event_column']] else yearly['networking_event_url']}">${morning_workshops.iloc[i - len(all_day_workshops)][schedule_columns['title_column']]}</a>
+                                <a href="${'#' + str(morning_workshops.iloc[i - len(all_day_workshops)][schedule_columns['id_column']]) if not morning_workshops.iloc[i - len(all_day_workshops)][schedule_columns['networking_event_column']] else network_url}">${morning_workshops.iloc[i - len(all_day_workshops)][schedule_columns['title_column']]}</a>
                             </p>
                         % endif
                     </td>
